Adjusted new logo and testimonials.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <!-- modernizr css -->
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
+        <style>
+        html {
+          scroll-behavior: smooth;
+        }
+        </style>
     </head>
     <body>
        <!-- preloader Start -->
@@ -50,8 +55,8 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                         <div class="logo-area">
-                          <a href="index.html" class="non-scrool"><img src="images/logo/logo_lydia_white.png" style="padding-left: 10px" height="100%" width="auto"></a>
-                          <a href="index.html" class="scrool"><img src="images/logo/logo_lydia_black.png" style="padding-left: 10px" height="100%" width="auto"></a>
+                          <a href="index.html" class="non-scrool"><img src="images/lydias_bird_black.gif" width=100% height="auto" style="padding-left: 25px"><!--<img src="images/logo/logo_lydia_white.png" style="padding-left: 10px" height="100%" width="auto"></a> -->
+                          <a href="index.html" class="scrool"><img src="images/lydias_bird_white.gif"  width="100%" width="auto" style="padding-left: 25px"></a>
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
@@ -79,7 +84,7 @@
                 </div>
                         <div class="header-right">
                             <span class="con-tc"></span>
-                            <a href="#" class="btn1 top_navi_btn"><span>CONTACT</span></a>
+                            <a href="#contact" class="btn1 top_navi_btn"><span>CONTACT</span></a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +98,7 @@
                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                         <div class="content">
                             
-                            <h2 class="wow animated fadeInLeft" data-wow-duration="1.5s" align="left"><img src="images/flyingbird.gif" width=40% height="auto" align="left" style="padding-right: 10px; padding-top: 10px">Do you want to be healthier and happier?</h2> <h2 align="left">Are you seeking true and lasting change?</h2>
+                            <h2 class="wow animated fadeInLeft" data-wow-duration="1.5s" align="left">Do you want to be healthier and happier?</h2> <h2 align="left">Are you seeking true and lasting change?</h2>
                             <p class="wow animated fadeInUp" data-wow-duration="2s">Whether your challenge concerns health, relationships, finances or business, Tao Healing Hands offers a solution.  Based on quantum physics, Tao Healing Hands sends high frequency and vibration to a person’s energy field, enabling positive, true, and lasting transformation.</p>
                             <a href="readmore.html" class="btn1 wow animated zoomIn" data-wow-duration="2.5s"><span>Read More</span></a>
                         </div>
@@ -122,7 +127,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                            <div class="about-spa">
+                            <div class="about-spa" id="contact">
                                 <span>Contact Us</span>
                                 <h2>Get In Touch</h2>
                                 <p>Nisi elit consequat ipsum, akshay handge nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputat.</p>
