--- a/readmore.html
+++ b/readmore.html
@@ -34,6 +34,13 @@
         <link rel="stylesheet" href="css/responsive.css">
 		<!-- modernizr css -->
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+
+        <style>
+        html {
+          scroll-behavior: smooth;
+        }
+        </style>
+
     </head>
     <body>
        <!-- preloader Start -->
@@ -48,11 +55,11 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                         <div class="logo-area">
-                            <a href="index.html" class="non-scrool"><img src="images/logo/logo.png" alt=""/></a>
-                            <a href="#" class="scrool"><img src="images/logo/logo-dark.png" alt=""/></a>
+                          <a href="index.html" class="non-scrool"><img src="images/lydias_bird_black.gif" width=100% height="auto" style="padding-left: 25px"><!--<img src="images/logo/logo_lydia_white.png" style="padding-left: 10px" height="100%" width="auto"></a> -->
+                          <a href="index.html" class="scrool"><img src="images/lydias_bird_white.gif"  width="100%" width="auto" style="padding-left: 25px"></a>
                         </div>
                     </div>
-                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
                        <div class="prs_menu_main_wrapper">
                     <nav class="navbar navbar-default">
                       <div id="dl-menu" class="xv-menuwrapper responsive-menu">
@@ -76,14 +83,13 @@
                   </nav>
                 </div>
                         <div class="header-right">
-                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 999 9999 9999</span>
-                            <a href="#" class="btn1 top_navi_btn"><span>APPOINTMENT</span></a>
+                            <span class="con-tc"></span>
+                            <a href="#contact" class="btn1 top_navi_btn"><span>CONTACT</span></a>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
-        <!--Header area end here-->
 
 
 
@@ -104,7 +110,7 @@
                     </div>
 
                     <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" style="padding-top: 50px">
-                        <div class="slider-right-side wow animated fadeInUp" data-wow-duration="1.5s">
+                        <div class="slider-right-side wow animated fadeInUp" data-wow-duration="2s">
                             <div class="photo-slider">
                                
                             </div>
@@ -121,7 +127,7 @@
         <!--Slider area end here-->
 
         <!--Videos area start here-->
-        <section class="videos-area section1 bg-img af jarallax" style="padding-bottom: 50px">
+      <!--  <section class="videos-area section1 bg-img af jarallax" style="padding-bottom: 50px">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -170,7 +176,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--Videos area end here-->
 
        
@@ -180,8 +186,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12" style="padding-top: 0px">
-                            <div class="about-spa">
-                                <span>Contsct Us</span>
+                            <div class="about-spa" id="contact">
+                                <span>Contact Us</span>
                                 <h2>Get In Touch</h2>
                                 <p>Nisi elit consequat ipsum, akshay handge nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputat.</p>
                             </div>
