New logo, added all the pages with content. Initial front page newletter form works.

--- a/consultations.html
+++ b/consultations.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Tao Calligraphy</title>
+        <title>Consultations</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
@@ -109,27 +109,60 @@
                         <div class="therapies">
                             <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                                 <div class="therrap-details">
-                                    <span class="title">Soul Readings</span>
+                                    <span class="title">Consultations</span>
                                     <h2>Personal Consultations are available via telephone.</h2>
                                     <div class="desc">
-                                        <p>You can ask for guidance on any topic you wish. Many people request guidance in the areas of physical, mental, and emotional health, relationships, finances, business, and career.</p>
+                                        <p>Experience life transformation with Tao hands. Tao Hands is a special spiritual transmission that carries the frequency and vibration of Tao Love, Light and Forgiveness and more.</p>
+                                        <p>Sessions are a half hour and can be done remotely by phone or zoom, what’s app, Facetime, or Skype.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12 pd-0">
-                                    <figure><img src="images/flyingbird.gif" style="width: 75%; height: auto; padding-left: 25px;" alt=""/></figure>
+                                    <figure><img src="images/nowisthetime.png" style="width: 75%; height: auto; padding-left: 25px; padding-bottom: 15px" alt=""/></figure>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <div class="thera-slider">
+
                                         <div class="thera-list">
                                             <div class="price">
-                                                <strong><b>$</b>75US</strong>
-                                                <span>Soul Reading (approximately 1 hour)</span>
+                                                <strong><b>$</b>50 US</strong><br>
+                                                <span>Single sessions for a half hour.</span>
+                                            </div>
+                                        </div>
+                                        <div class="thera-list">
+                                            <div class="price">
+                                                <strong><b>$</b>150 US</strong><br>
+                                                <span>Packages are available such as 4 half hour sessions.</span>
+                                            </div>
+                                        </div>
+                                        <div class="thera-list">
+                                            <div class="price">
+                                                <strong><b>$</b>500 US</strong><br>
+                                                <span>One month of 15 minute Tao Hands transmission daily for chronic conditions.</span>
+                                            </div>
+                                        </div>
+                                        <div class="thera-list">
+                                            <div class="price">
+                                                <strong><b>$</b>100 US</strong><br>
+                                                <span>Tao Calligraphy written for your specific request.</span>
+                                            </div>
+                                        </div>
+                                        <div class="thera-list">
+                                            <div class="price">
+                                                <strong><b>$</b>75 US</strong><br>
+                                                <span>Soul Readings available</span>
+                                            </div>
+                                        </div>
+                                        <div class="thera-list">
+                                            <div class="price">
+                                                <strong><b>$</b>500 US</strong><br>
+                                                <span>Guan Yin crown chakra blessing</span>
                                             </div>
                                         </div>
                                         
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
                                 <div class="threapies-form">
                                     <div class="head-form">
@@ -141,7 +174,12 @@
                                         <fieldset><input type="email" placeholder="Email Address *"></fieldset>
                                         <fieldset><input type="number" placeholder="Phone"></fieldset>
                                         <fieldset><select>
-                                            <option>$75 Soul Reading (approximately 1 hour)</option>
+                                            <option>$50 Single sessions for a half hour</option>
+                                            <option>$150 Packages are available such as 4 half hour sessions</option>
+                                            <option>$500 One month of 15 minute Tao Hands transmission daily for chronic conditions</option>
+                                            <option>$100 Tao Calligraphy written for your specific request</option>
+                                            <option>$75 Soul Readings</option>
+                                            <option>$500 Guan Yin crown chakra blessing</option>
                                         </select></fieldset>
                                         <fieldset><textarea placeholder="Message"></textarea></fieldset>
                                         <button type="submit" class="btn3"><span>Book</span></button>
