--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                         <div class="logo-area">
-                          <a href="index.html" class="non-scrool"><img src="images/lydias_bird_black.gif" width=100% height="auto" style="padding-left: 25px"><!--<img src="images/logo/logo_lydia_white.png" style="padding-left: 10px" height="100%" width="auto"></a> -->
-                          <a href="index.html" class="scrool"><img src="images/lydias_bird_white.gif"  width="100%" width="auto" style="padding-left: 25px"></a>
+                          <a href="index.html" class="non-scrool"><img src="images/logo_white.gif" width=100% height="auto">
+                          <a href="index.html" class="scrool"><img src="images/logo_black.gif"  width="100%" height="auto"></a>
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
@@ -76,7 +76,7 @@
                                       <li><a href="soulreadings.html">Soul Readings</a></li>
                                   </ul>
                               </li>
-                              <li class="parent"><a href="contact.html">Consultations</a>
+                              <li class="parent"><a href="consultations.html">Consultations</a>
                               </li>
                           </ul>
                       </div><!-- /dl-menuwrapper -->
@@ -84,6 +84,7 @@
                 </div>
                         <div class="header-right">
                             <span class="con-tc"></span>
+                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 306-380-3377</span>
                             <a href="#contact" class="btn1 top_navi_btn"><span>CONTACT</span></a>
                         </div>
                     </div>
@@ -180,32 +181,14 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="videos">
-                            <ul class="list-inline" role="tablist">
+                           <!-- <ul class="list-inline" role="tablist">
                                 <li role="presentation" class="active"><a href="#vid1" aria-controls="vid1" role="tab" data-toggle="tab">Back Pain</a></li>
-                            </ul>
+                            </ul> -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="vid1">
                                     <figure>
                                         <img src="images/videos/lydia_back_pain_video.jpg" alt=""/>
                                         <a href="https://www.youtube.com/watch?v=83LR-zOUYTc" class="video-play-icon"><i class="fa fa-play"></i></a>
-                                    </figure>
-                                </div>
-                                <div role="tabpanel" class="tab-pane" id="vid2">
-                                    <figure>
-                                        <img src="images/videos/2.jpg" alt=""/>
-                                        <a href="https://www.youtube.com/watch?v=0I8GmbDU7c4" class="video-play-icon"><i class="fa fa-play"></i></a>
-                                    </figure>
-                                </div>
-                                <div role="tabpanel" class="tab-pane" id="vid3">
-                                    <figure>
-                                        <img src="images/videos/3.jpg" alt=""/>
-                                        <a href="https://www.youtube.com/watch?v=0I8GmbDU7c4" class="video-play-icon"><i class="fa fa-play"></i></a>
-                                    </figure>
-                                </div>
-                                <div role="tabpanel" class="tab-pane" id="vid4">
-                                    <figure>
-                                        <img src="images/videos/4.jpg" alt=""/>
-                                        <a href="https://www.youtube.com/watch?v=0I8GmbDU7c4" class="video-play-icon"><i class="fa fa-play"></i></a>
                                     </figure>
                                 </div>
                             </div>
@@ -222,36 +205,26 @@
             <div class="footer-top  section2">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12" style="padding-top: 0px">
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                             <div class="about-spa" id="contact">
-                                <span>Contsct Us</span>
-                                <h2>Get In Touch</h2>
-                                <p>Nisi elit consequat ipsum, akshay handge nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputat.</p>
+                                <span>Contact Us</span>
+                                <h2>Get In Touch with Lydia</h2>
                             </div>
                             <div class="subs-box">
                                 <form>
-                                    <label>subscribe our newsletter</label>
+                                    <span style="color: white">Subscribe To Our Newsletter</span>
                                     <input type="email" placeholder="Email Address *">
                                     <button><i class="fa fa-long-arrow-right"></i></button>
                                 </form>
                             </div>
                             <div class="con-info">
                                 <ul>
-                                    <li><span><i class="fa fa-phone"></i></span><p>Call : +123 456 789</p></li>
-                                    <li><span><i class="fa fa-envelope"></i></span><p>Email :<strong> book@example.com</strong></p></li>
-                                    <li><span><i class="fa fa-clock-o"></i></span><p>Opening Times : 11:30 - 22:00 Clock</p></li>
+                                    <li><span><i class="fa fa-phone"></i></span><p>Call : +1 604-359-5568</p></li>
+                                    <li><span><i class="fa fa-envelope"></i></span><p>Email :<strong> <a href="mailto:lydia@lydiashealingart.com">lydia@lydiashealingart.com</a></strong></p></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-                            <div class="map-area">
-                                <div id="map" class="map-full" style="width:100%; height:450px;"></div>
-                                <address>
-                                    <strong>Address</strong>
-                                    <p>123 Street, Dewas House, Country, 12345</p>
-                                </address>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -267,9 +240,6 @@
                             <div class="bot-social">
                                 <ul class="list-inline">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
