--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 </div>
                         <div class="header-right">
                             <span class="con-tc"></span>
-                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 306-380-3377</span>
+                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 604-359-5568</span>
                             <a href="#contact" class="btn1 top_navi_btn"><span>CONTACT</span></a>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                         <div class="content">
                             <span class="tit">Everything and everyone comes from Tao.</span>
                             
-                            <h2 class="wow animated fadeInUp" data-wow-duration="1.5s">Tao is the Source. Tao creates everything and everyone.  It is the void, nothingness, emptiness from which everything is created.</h2>
+                            <h2 class="wow animated fadeInLeft" data-wow-duration="1.5s">Tao is the Source. Tao creates everything and everyone.  It is the void, nothingness, emptiness from which everything is created.</h2>
                             
                             <img src="images/lydiapic.jpg" style="padding-bottom: 10px">
                             <h2 >About me, Lydia:</h2>
@@ -140,26 +140,36 @@
                              <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">In Master Sha’s teachings, Tao is The Source and Ultimate Creator; Tao is Oneness. Everything comes from Tao and everything returns to Tao.</p>
 
                             <p><div style="display: table; content: ""; clear: both;">
-                                <div style="float: left; width: 33.33%;"><img src="images/sun.jpg" alt="" width="auto" height="auto" position="center"/> </div>
-                                <div style="float: left; width: 33.33%;"><img src="images/face_rock.png" alt="" width="auto" height="auto" /> </div>
-                                <div style="float: left; width: 33.33%;"><img src="images/mandala.jpg" alt="" width="auto" height="auto" /> </div>
+                                <div class="wow animated fadeInRight" data-wow-duration="2s" style="float: left; width: 33.33%; padding: 5px"><img src="images/sun_clear.png" alt="" width="auto" height="auto" position="center"/> </div>
+                                <div class="wow animated fadeInRight" data-wow-duration="2.5s" style="float: left; width: 33.33%; padding: 5px"><img src="images/face_rock_clear.png" alt="" width="auto" height="auto" /> </div>
+                                <div class="wow animated fadeInRight" data-wow-duration="3s" style="float: left; width: 33.33%; padding: 5px"><img src="images/mandala_clear.png" alt="" width="auto" height="auto" /> </div>
                             </div>
                             </p> 
                         </div>
                     </div>
                 </div>
                 <div class="slider-right-side wow animated fadeInUp" data-wow-duration="1.5s">
-                 <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">Ten years ago I was on a healing journey for myself.  I had debilitating back pain that prevented me from working, walking, sitting, sleeping or functioning normally.  I was in such pain that I literally thought about taking my own life.  I went on a healing journey, trying everything I could find. Traditional medical doctors wanted to cut into my spine and fuse my discs together. The success rate was 50%. I did not want to take this route.</p>
+                 <p style="color:white">Ten years ago I was on a healing journey for myself.  I had debilitating back pain that prevented me from working, walking, sitting, sleeping or functioning normally.  I was in such pain that I literally thought about taking my own life.  I went on a healing journey, trying everything I could find. Traditional medical doctors wanted to cut into my spine and fuse my discs together. The success rate was 50%. I did not want to take this route.</p>
 
-                <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">I tried anything and everything I could find, including massage, chiropractic care (at one point I was going to the Chiropractor 3 to 5 times a week!), essential oils, energy work of various types, and yoga. I did find some temporary relief, but nothing fixed the root of the problem.  Then I found Master Sha and his then four power techniques. </p>
+                <p style="color:white">I tried anything and everything I could find, including massage, chiropractic care (at one point I was going to the Chiropractor 3 to 5 times a week!), essential oils, energy work of various types, and yoga. I did find some temporary relief, but nothing fixed the root of the problem.  Then I found Master Sha and his then four power techniques. </p>
 
-                <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">The first evening I met Master Sha, he asked for a volunteer in the audience with back pain.  I raised my hand and was very blessed to be chosen. From the first healing service that he gave me, my back was healed and the pain was gone. I was literally dancing on the stage. Through the next five days, I was able to sit in a chair for hours without any pain! I was amazed. I wanted to learn more about his techniques so that I could learn how to heal myself and share with my friends and family.</p>  
+                <p style="color:white">The first evening I met Master Sha, he asked for a volunteer in the audience with back pain.  I raised my hand and was very blessed to be chosen. From the first healing service that he gave me, my back was healed and the pain was gone. I was literally dancing on the stage. Through the next five days, I was able to sit in a chair for hours without any pain! I was amazed. I wanted to learn more about his techniques so that I could learn how to heal myself and share with my friends and family.</p>  
 
-                <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">For the next 10 years, I continued to study with Master Sha to learn as much as I could about how the body and mind heals.  I learned about soul power and that the soul is the boss.</p>
+                <p style="color:white">For the next 10 years, I continued to study with Master Sha to learn as much as I could about how the body and mind heals.  I learned about soul power and that the soul is the boss.</p>
 
-                <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">“Heal the soul first, and the mind and body will follow,” is Master Sha’s one sentence secret.</p> 
+                <p style="color:white">“Heal the soul first, and the mind and body will follow,” is Master Sha’s one sentence secret.</p> 
 
-                <p class="wow animated fadeInUp" data-wow-duration="2s" style="color:white">Today, I am devoted to making others happier and healthier by offering and teaching what I have learned from Master Sha.</p>
+                <p style="color:white">Today, I am devoted to making others happier and healthier by offering and teaching what I have learned from Master Sha.</p>
+
+                <p><div style="display: table; clear: both;" align="center">
+                    <div class="wow animated fadeInLeft" data-wow-duration="1.5s" style="float: left; width: 20%; height:auto; padding: 25px"><img src="images/dragonfly_clear.png" alt=""/> </div>
+                    <div class="wow animated fadeInLeft" data-wow-duration="1s" style="float: left; width: 20%; height:auto;  padding: 25px"><img src="images/sunmoon_clear.png" alt=""/> </div>
+                    <div class="wow animated fadeInUp" data-wow-duration="2s" style="float: left; width: 20%; height:auto;  padding: 25px"><img src="images/color_clear.png" alt=""/> </div>
+                    <div class="wow animated fadeInRight" data-wow-duration="1s" style="float: left; width: 20%; height:auto;  padding: 25px"><img src="images/plant_clear.png" alt="" /> </div>
+                    <div class="wow animated fadeInRight" data-wow-duration="1.5s" style="float: left; width: 20%; height:auto;  padding: 25px"><img src="images/peace_clear.png" alt=""/> </div>
+                </div>
+                </p>
+
             </div>
             </div>
 
@@ -211,11 +221,11 @@
                                 <h2>Get In Touch with Lydia</h2>
                             </div>
                             <div class="subs-box">
-                                <form>
-                                    <span style="color: white">Subscribe To Our Newsletter</span>
-                                    <input type="email" placeholder="Email Address *">
-                                    <button><i class="fa fa-long-arrow-right"></i></button>
-                                </form>
+                                <span style="color: white">For further information or to make an inquiry:</span>
+                                    <form action="mail_handler.php" method="post">
+                                        <input type="text" name="first_name" placeholder="Name *" required><br>
+                                        <input type="email" name="email" placeholder="Email Address *" required><br><button name="submit"><i class="fa fa-long-arrow-right"></i></button>
+                                    </form>
                             </div>
                             <div class="con-info">
                                 <ul>
