--- a/consultations.html
+++ b/consultations.html
@@ -86,7 +86,7 @@
                   </nav>
                 </div>
                         <div class="header-right">
-                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 306-380-3377</span>
+                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 604-359-5568</span>
                             <a href="#contact" class="btn1 top_navi_btn"><span>Contact</span></a>
                         </div>
                     </div>
@@ -169,11 +169,11 @@
                                         <span>Book Here</span>
                                         <h3>Fill Your Detail</h3>
                                     </div>
-                                    <form>
-                                        <fieldset><input type="text" placeholder="Full Name *"></fieldset>
-                                        <fieldset><input type="email" placeholder="Email Address *"></fieldset>
-                                        <fieldset><input type="number" placeholder="Phone"></fieldset>
-                                        <fieldset><select>
+                                    <form action="booking_mail_handler.php" method="post">
+                                        <fieldset><input type="text" name="first_name" placeholder="Full Name *" required=""></fieldset>
+                                        <fieldset><input type="email" name="email" placeholder="Email Address *" required=""></fieldset>
+                                        <fieldset><input type="number" name="number" placeholder="Phone" required=""></fieldset>
+                                        <fieldset><select name="booking">
                                             <option>$50 Single sessions for a half hour</option>
                                             <option>$150 Packages are available such as 4 half hour sessions</option>
                                             <option>$500 One month of 15 minute Tao Hands transmission daily for chronic conditions</option>
@@ -181,8 +181,8 @@
                                             <option>$75 Soul Readings</option>
                                             <option>$500 Guan Yin crown chakra blessing</option>
                                         </select></fieldset>
-                                        <fieldset><textarea placeholder="Message"></textarea></fieldset>
-                                        <button type="submit" class="btn3"><span>Book</span></button>
+                                        <fieldset><textarea name="message" placeholder="Message"></textarea></fieldset>
+                                        <button type="submit" name="submit" class="btn3"><span>Book</span></button>
                                     </form>
                                 </div>
                             </div>
@@ -209,11 +209,11 @@
                                 <h2>Get In Touch with Lydia</h2>
                             </div>
                             <div class="subs-box">
-                                <form>
-                                    <span style="color: white">Subscribe To Our Newsletter</span>
-                                    <input type="email" placeholder="Email Address *">
-                                    <button><i class="fa fa-long-arrow-right"></i></button>
-                                </form>
+                               <span style="color: white">For further information or to make an inquiry:</span>
+                                    <form action="mail_handler.php" method="post">
+                                        <input type="text" name="first_name" placeholder="Name *" required><br>
+                                        <input type="email" name="email" placeholder="Email Address *" required><br><button name="submit"><i class="fa fa-long-arrow-right"></i></button>
+                                    </form>
                             </div>
                             <div class="con-info">
                                 <ul>
