--- a/readmore.html
+++ b/readmore.html
@@ -84,7 +84,7 @@
                 </div>
                         <div class="header-right">
                             <span class="con-tc"></span>
-                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 306-380-3377</span>
+                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 604-359-5568</span>
                             <a href="#contact" class="btn1 top_navi_btn"><span>CONTACT</span></a>
                         </div>
                     </div>
@@ -192,11 +192,11 @@
                                 <h2>Get In Touch with Lydia</h2>
                             </div>
                             <div class="subs-box">
-                                <form>
-                                    <span style="color: white">Subscribe To Our Newsletter</span>
-                                    <input type="email" placeholder="Email Address *">
-                                    <button><i class="fa fa-long-arrow-right"></i></button>
-                                </form>
+                                    <span style="color: white">For further information or to make an inquiry:</span>
+                                    <form action="mail_handler.php" method="post">
+                                        <input type="text" name="first_name" placeholder="Name *" required><br>
+                                        <input type="email" name="email" placeholder="Email Address *" required><br><button name="submit"><i class="fa fa-long-arrow-right"></i></button>
+                                    </form>
                             </div>
                             <div class="con-info">
                                 <ul>
