--- a/soulreadings.html
+++ b/soulreadings.html
@@ -86,7 +86,7 @@
                   </nav>
                 </div>
                         <div class="header-right">
-                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 306-380-3377</span>
+                            <span class="con-tc"><i class="fa fa-phone" aria-hidden="true"></i>+1 604-359-5568</span>
                             <a href="#contact" class="btn1 top_navi_btn"><span>Contact</span></a>
                         </div>
                     </div>
@@ -136,15 +136,15 @@
                                         <span>Book Here</span>
                                         <h3>Fill Your Detail</h3>
                                     </div>
-                                    <form>
-                                        <fieldset><input type="text" placeholder="Full Name *"></fieldset>
-                                        <fieldset><input type="email" placeholder="Email Address *"></fieldset>
-                                        <fieldset><input type="number" placeholder="Phone"></fieldset>
-                                        <fieldset><select>
+                                    <form action="booking_mail_handler.php" method="post">
+                                        <fieldset><input type="text" name="first_name" placeholder="Full Name *" required=""></fieldset>
+                                        <fieldset><input type="email" name="email" placeholder="Email Address *" required=""></fieldset>
+                                        <fieldset><input type="number" name="number" placeholder="Phone" required=""></fieldset>
+                                        <fieldset><select name="booking">
                                             <option>$75 Soul Reading (approximately 1 hour)</option>
                                         </select></fieldset>
-                                        <fieldset><textarea placeholder="Message"></textarea></fieldset>
-                                        <button type="submit" class="btn3"><span>Book</span></button>
+                                        <fieldset><textarea name="message" placeholder="Message"></textarea></fieldset>
+                                        <button type="submit" name="submit" class="btn3"><span>Book</span></button>
                                     </form>
                                 </div>
                             </div>
@@ -171,11 +171,11 @@
                                 <h2>Get In Touch with Lydia</h2>
                             </div>
                             <div class="subs-box">
-                                <form>
-                                    <span style="color: white">Subscribe To Our Newsletter</span>
-                                    <input type="email" placeholder="Email Address *">
-                                    <button><i class="fa fa-long-arrow-right"></i></button>
-                                </form>
+                                <span style="color: white">For further information or to make an inquiry:</span>
+                                    <form action="mail_handler.php" method="post">
+                                        <input type="text" name="first_name" placeholder="Name *" required><br>
+                                        <input type="email" name="email" placeholder="Email Address *" required><br><button name="submit"><i class="fa fa-long-arrow-right"></i></button>
+                                    </form>
                             </div>
                             <div class="con-info">
                                 <ul>
@@ -184,18 +184,20 @@
                                 </ul>
                             </div>
                         </div>
-                        
+ 
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
+
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="copyright">
                                 <p>Copyright © Lydia's Healing Art 2020. All rights reserved.</p>
                             </div>
                         </div>
+
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <div class="bot-social">
                                 <ul class="list-inline">
@@ -203,6 +205,7 @@
                                 </ul>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>  
